# bccdgs

./: .gitignore  README.md  README.rst  analysis.ipynb  analysis.py  create_data.py  create_plots.py  flake.nix  gen-tex-env.sh  main.py  pyproject.toml  result.py  run.py  runstats  runstats2  tex-env.nix
R/: gen_graph.R  generate_input.R  mag_to_pag.R  main.R  pag_to_mag.R  run_bccd.R  run_fci.R
bccdgs/: bccdgs.py  r.py  run.py  score.py  util.py
bccdgsr/: DESCRIPTION
bccdgsr/R/: main.R
data/: bccd_result.csv  lst.csv  original_dag.csv  pag.csv  pag3.csv  scst.csv  test.txt
data/old/: pag1.csv  pag2.csv
report/: Makefile  flash_talk.tex  outline.md  proposal.tex  thesis.bib  thesis.md  thesis.tex
report/bib/: thesis.bib
tests/: test_r.py  test_score.py  test_thesis.py
thesis/: bccdgs.py  compare.py  conversion.py  data_io.py  graphs_array.py  main.py  new_mag.py  r.py  read_data.py  run.py  score.py  util.py
