[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["dspijkers <daan@spijke.rs>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.2"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
