[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["dspijkers <daan@spijke.rs>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.2"
pandas = "^1.3.3"
seaborn = "^0.11.2"
matplotlib = "^3.5.1"
snakeviz = "^2.1.1"
numba = "^0.55.1"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
